# rust_flutter_ffi

./: README.md  ffigen.yaml  pubspec.yaml
rust_flutter_ffi_core/: Cargo.toml  build.rs  cbindgen.toml
rust_flutter_ffi_core/src/: ffi.rs  lib.rs
rust_flutter_ffi_core/src/api/: check_application_version_fl.rs  download_application_api_fl.rs  fetch_configuration_from_api_fl.rs  get_active_window_with_time_api_fl.rs  listen_mouse_keyboard_event_api_fl.rs  mod.rs  search_key_from_url_api_fl.rs  send_browser_history_api_fl.rs  send_console_data_to_api_fl.rs  send_desktop_details_api_fl.rs  send_detect_email_to_api_fl.rs  send_detect_meeting_data_to_api_fl.rs  send_detected_chat_data_to_api_fl.rs  send_detected_social_media_data_to_api_fl.rs  send_file_events_to_api_fl.rs  send_log_to_api_fl.rs  send_running_process_api_fl.rs  send_screenshot_and_text_api_fl.rs  token_from_employe_id.rs
rust_flutter_ffi_core/src/components/: admin_check_fl.rs  convert_screenshot_to_base64_fl.rs  generate_update_script_fl.rs  get_employee_id_from_app_name_fl.rs  mod.rs
rust_flutter_ffi_core/src/models/: mod.rs  tracforce_get_model.rs  tracforce_post_model.rs
rust_flutter_ffi_core/src/modules/: check_and_update_application_fl.rs  mod.rs  start_application.rs  start_application_mod.rs  start_application_v2.rs
rust_flutter_ffi_core/src/modules/components/: mod.rs
rust_flutter_ffi_core/src/modules/components/application_install_check/: application_install_check_fl.rs  mod.rs
rust_flutter_ffi_core/src/modules/components/application_restrictions/: application_restrictions_fl.rs  mod.rs
rust_flutter_ffi_core/src/modules/components/capture_screen_shot/: capture_screen_shot_fl.rs  capture_screenshot_and_ocr.rs  mod.rs
rust_flutter_ffi_core/src/modules/components/desktop_details_info/: desktop_details_info_fl.rs  mod.rs
rust_flutter_ffi_core/src/modules/components/detect_console_command/: detect_console_command_fl.rs  (+1 more)
src/: CMakeLists.txt  rust_flutter_ffi.h
(+100 files in other folders)
