[package]
name = "rust_flutter_ffi_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", 'staticlib', 'rlib']

[dependencies]
libc = "0"

screenshots = "0.8.10"
sysinfo = "0.27.0"
rdev = "0.5.3"
notify = "6.1.1"
dirs = "5.0.1"
anyhow = "1.0.91"
hostname = "0.4.0"
if-addrs = "0.13.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
webp = { version = "0.1", features = ["image"] }
regex = "1.11.0"
chrono = "0.4.38"
cfg-if = "1.0.0"
imageproc = "0.25.0"
clipboard = "0.5.0"
thirtyfour = "0.32.0"
url = "2.5.4"
mac_address = "1.1.7"
base64 = "0.22.1"
image = "0.23.14"

# sending data to the server crates
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cached = "0.53.1"
lazy_static = "1.5.0"
once_cell = "1.20.2"

[target.'cfg(windows)'.dependencies]
runas = "1.2.0"
winapi = { version = "0.3.9", features = ["consoleapi", "winuser"] }
winreg = "0.52.0"
windows = "0.48"

[target.'cfg(unix)'.dependencies]
nix = "0.26"

[build-dependencies]
cbindgen = "0"
bindgen = "0"
